# HavenHealthPassport

./: .editorconfig  .env.example  .flake8  .gitignore  .gitmessage  .lighthouserc.js  .lintstagedrc.json  .pre-commit-config.yaml  .pylintrc  AWS_TEST_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.mobile  Dockerfile.web  LICENSE  Makefile  QUICKSTART.md  README.md  REQUIREMENTS.md  SANITIZATION_SUMMARY.md  SECURITY_SETUP.md  alembic.ini  app.py  check_coverage.py  check_errors.py  commitlint.config.js  coverage_tester.py  cypress.config.ts  demo_server.py  docker-compose.cert.yml  docker-compose.test.yml  docker-compose.yml  index.html  jest.config.fix.js  jest.config.js  jest.runner.config.js  kms_policy.json  kms_user_policy.json  (+22 more)
__mocks__/: fileMock.js  svgMock.js
alembic/: env.py
blockchain/: Makefile  README.md  docker-compose.yml  install-fabric.sh  package.json  tsconfig.json  verify-blockchain-implementation.sh
contracts/: README.md
demos/: README.md  alert_mechanisms_demo.py  automated_reporting_demo.py  aws_breaking_barriers_demo.py  aws_breaking_barriers_interactive.html  benchmark_demo.py  blockchain_verification_demo.py  dashboard_demo.py  demo-app.js  demo-runner.py  demo-styles.css  demo-ui.html  icd10_mapper_demo.py  medical_vocabularies_demo.py  refugee_journey_demo.py  rxnorm_mapper_demo.py  snomed_ct_demo.py  start-demo.sh  transcribe_medical_demo.py
docker-config/: blockchain-compose.yml
docs/: README.md
examples/: batch_processing_demo.py  document_classification_example.py  emotion_detection_demo.py  iso27001_access_management_setup.py  noise_reduction_example.py  output_formatting_demo.py  punctuation_restoration_demo.py  quality_enhancement_example.py  realtime_streaming_demo.py  stress_analysis_demo.py
fhir-config/: application.yaml
fhir-server/: Dockerfile  README-conformance.md  pom.xml  verify-capability-statement.sh
migrations/: add_ab_test_tables.sql  add_biometric_authentication_tables.sql  add_bulk_operations_table.sql  add_context_preservation_tables.sql  add_email_verification_tracking.sql  add_encryption_support.sql  add_family_verification_fields.sql  add_fido2_enhancements.sql  add_file_versioning.sql  add_jwt_key_rotation_logs.sql  add_medical_glossary_table.sql  add_reports_tables.py  add_risk_assessment_logs.sql  add_session_management_fields.sql  (+6 more)
(+2068 files in other folders)
